@@ -10,6 +10,7 @@ import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 
 import org.springframework.http.ResponseEntity;
+import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -55,7 +56,7 @@ public class OrderServiceImpl implements IOrderService {
 
 
     @Override
-    public ResponseEntity<APIRespone> processOrder(Long userId, String paymentMethod, List<Long> cartIds, String deliveryAddress, String orderCode) {
+    public ResponseEntity<APIRespone> processOrder(Long userId, String paymentMethod, List<Long> cartIds, String deliveryAddress, Double longitude, Double latitude, String orderCode) {
 
         List<Cart> cartItems = cartIds.stream()
                 .flatMap(cartId -> cartItemRepository.findByCartId(cartId).stream())
@@ -75,7 +76,7 @@ public class OrderServiceImpl implements IOrderService {
                 .map(storeRepository::findById)
                 .filter(Optional::isPresent)
                 .map(Optional::get)
-                .collect(Collectors.toList());
+                .toList();
 
         if (stores.isEmpty()) {
             return ResponseEntity.badRequest().body(new APIRespone(false, "No stores found in the cart", ""));
@@ -98,6 +99,13 @@ public class OrderServiceImpl implements IOrderService {
         order.setUpdatedAt(LocalDateTime.now());
         order.setUser(user);
         order.setDeliveryAddress(deliveryAddress);
+        if (deliveryAddress.equalsIgnoreCase("Mua tại cửa hàng")) {
+            order.setDeliveryAddress("Mua tại cửa hàng");
+        } else {
+            order.setDeliveryAddress(deliveryAddress);
+            order.setLongitude(longitude);
+            order.setLatitude(latitude);
+        }
 
         List<OrderDetail> orderDetails = cartItems.stream().map(cartItem -> {
             OrderDetail orderDetail = new OrderDetail();
@@ -107,85 +115,54 @@ public class OrderServiceImpl implements IOrderService {
             } else if (cartItem.getCombo() != null) {
                 orderDetail.setCombo(cartItem.getCombo());
             }
-            orderDetail.setQuantity(cartItem.getQuantity());
-            orderDetail.setUnitPrice(cartItem.getUnitPrice());
-            orderDetail.setTotalPrice(cartItem.getTotalPrice());
+            orderDetail.setQuantity(Integer.valueOf(cartItem.getQuantity()));
+            orderDetail.setUnitPrice(Double.valueOf(cartItem.getUnitPrice()));
+            orderDetail.setTotalPrice(Double.valueOf(cartItem.getTotalPrice()));
             orderDetail.setSize(cartItem.getSize());
             Store store = storeRepository.findById(cartItem.getStoreId()).orElseThrow(() -> new EntityNotFoundException("Store not found"));
             orderDetail.setStore(store);
             orderDetail.setStatus(statusOrderRepository.findByStatusName("Đơn hàng mới"));
-//            //
-//            ShipperOrder shipperOrder = shipperOrderRepository.findByStoreAndDeliveryStatus(store, "Chưa giao")
-//                    .get(() -> {
-//                        ShipperOrder newShipperOrder = new ShipperOrder();
-//                        newShipperOrder.setStore(store);
-//                        newShipperOrder.setShipper(defaultShipper);
-//                        newShipperOrder.setCreatedAt(LocalDateTime.now());
-//                        newShipperOrder.setDeliveryStatus("Chưa giao");
-//                        return shipperOrderRepository.save(newShipperOrder);
-//                    });
-//
-//            // Liên kết OrderDetail với ShipperOrder
-//            orderDetail.setShipperOrder(shipperOrder);
-
             return orderDetail;
         }).collect(Collectors.toList());
+//        // Nhóm các order detail theo cửa hàng
+//       if (!deliveryAddress.equalsIgnoreCase("Mua tại cửa hàng")) {
+//            Map<Store, List<OrderDetail>> groupedOrderDetails = orderDetails.stream()
+//                    .collect(Collectors.groupingBy(OrderDetail::getStore));
+//            for (Map.Entry<Store, List<OrderDetail>> entry : groupedOrderDetails.entrySet()) {
+//                Store store = entry.getKey();
+//                List<OrderDetail> orderDetailList = entry.getValue();
+//                // Tìm shipper gần nhất nhưng không phải shipper đang bận
+//                User nearestShipper = shipperRepository.findNearestShippers(store.getLatitude(), store.getLongitude(), 1)
+//                        .stream()
+//                        .findFirst()
+//                        .orElseThrow(() -> new EntityNotFoundException("No available shippers found nearby"));
+//                ShipperOrder newShipperOrder = new ShipperOrder();
+//                newShipperOrder.setStore(store);
+//                newShipperOrder.setShipper(nearestShipper);
+//                newShipperOrder.setCreatedAt(LocalDateTime.now());
+//                newShipperOrder.setStatus("Chưa nhận");
+//                // set the shipper to inactive
+//                nearestShipper.setIsActive(false);
+//                shipperRepository.save(nearestShipper);
+//                shipperOrderRepository.save(newShipperOrder);
+//                // Gán ShipperOrder cho tất cả các OrderDetail của store này
+//                orderDetailList.forEach(orderDetail -> orderDetail.setShipperOrder(newShipperOrder));
+//                // Tính phí vận chuyển
+//                Double shippingFee = calculateShippingFee(order, store);
+//                order.setShippingFee(shippingFee);
+//            }
+//        }
+        // Lưu các order detail
         order.setOrderDetails(orderDetails);
-        order.setTotalAmount(orderDetails.stream().mapToDouble(OrderDetail::getTotalPrice).sum());
-
+        order.setTotalAmount(Double.valueOf(orderDetails.stream().mapToDouble(OrderDetail::getTotalPrice).sum()));
         orderRepository.save(order);
         cartItemRepository.deleteAll(cartItems);
 
         return ResponseEntity.ok(new APIRespone(true, "Order placed successfully", ""));
     }
-    public ResponseEntity<APIRespone> processProductOrderNow(Long userId, String paymentMethod, Long productId, Long storeId, Integer quantity, String size ,String deliveryAddress, String orderCode){
-        Optional<Product> productOptional = productRepository.findByProductId(productId);
-        if (productOptional.isEmpty()) {
-            return ResponseEntity.badRequest().body(new APIRespone(false, "Product not found", ""));
-        }
-        Product product = productOptional.get();
-        Optional<Store> storeOptional = storeRepository.findById(storeId);
-        if (storeOptional.isEmpty()) {
-            return ResponseEntity.badRequest().body(new APIRespone(false, "Store not found", ""));
-        }
-        PaymentMethod paymentMethodEntity = paymentMethodRepository.findByName(paymentMethod);
-        if (paymentMethodEntity == null) {
-            return ResponseEntity.badRequest().body(new APIRespone(false, "Payment method not found", ""));
-        }
-        Optional<User> userOptional = userRepository.findById(userId);
-        if (userOptional.isEmpty()) {
-            return ResponseEntity.badRequest().body(new APIRespone(false, "User not found", ""));
-        }
-        User user = userOptional.get();
-        Order order = new Order();
-        order.setOrderDate(LocalDateTime.now());
-        StatusOrder statusOrder = statusOrderRepository.findByStatusName("Đơn hàng mới");
-        order.setStatus(statusOrder);
-        order.setOrderCode(orderCode);
-        order.setCreatedAt(LocalDateTime.now());
-        order.setUpdatedAt(LocalDateTime.now());
-        order.setUser(user);
-        order.setDeliveryAddress(deliveryAddress);
-        Size s = sizeRepository.findByName(size);
-        OrderDetail orderDetail = new OrderDetail();
-        orderDetail.setOrder(order);
-        orderDetail.setProduct(product);
-        orderDetail.setQuantity(quantity);
-        orderDetail.setUnitPrice(product.getPrice());
-        orderDetail.setTotalPrice(product.getPrice() * quantity);
-        orderDetail.setSize(s);
-        orderDetail.setStore(storeOptional.get());
-        orderDetail.setStatus(statusOrderRepository.findByStatusName("Đơn hàng mới"));
-        // Use a mutable list instead of List.of(...)
-        List<OrderDetail> orderDetails = new ArrayList<>();
-        orderDetails.add(orderDetail);
-        order.setOrderDetails(orderDetails);
-        order.setTotalAmount(orderDetail.getTotalPrice());
-        orderRepository.save(order);
-        return ResponseEntity.ok(new APIRespone(true, "Order placed successfully", ""));
-        }
+
     @Override
-    public ResponseEntity<APIRespone> processOrderNow(Long userId, String paymentMethod, Long productId, Long comboId, Long drinkId, Long storeId, Integer quantity, String size, String deliveryAddress, String orderCode) {
+    public ResponseEntity<APIRespone> processOrderNow(Long userId, String paymentMethod, Long productId, Long comboId, Long drinkId, Long storeId, Integer quantity, String size, String deliveryAddress, Double longitude, Double latitude,String orderCode) {
         Product product = null;
         Combo combo = null;
 
@@ -223,7 +200,6 @@ public class OrderServiceImpl implements IOrderService {
         if (userOptional.isEmpty()) {
             return ResponseEntity.badRequest().body(new APIRespone(false, "User not found", ""));
         }
-
         User user = userOptional.get();
         Order order = new Order();
         order.setOrderDate(LocalDateTime.now());
@@ -234,8 +210,14 @@ public class OrderServiceImpl implements IOrderService {
         order.setUpdatedAt(LocalDateTime.now());
         order.setUser(user);
         order.setDeliveryAddress(deliveryAddress);
+        if (deliveryAddress.equalsIgnoreCase("Mua tại cửa hàng")) {
+            order.setDeliveryAddress("Mua tại cửa hàng");
+        } else {
+            order.setDeliveryAddress(deliveryAddress);
+            order.setLongitude(longitude);
+            order.setLatitude(latitude);
+        }
         Size s = sizeRepository.findByName(size);
-
         OrderDetail orderDetail = new OrderDetail();
         orderDetail.setOrder(order);
         orderDetail.setProduct(product);
@@ -244,12 +226,11 @@ public class OrderServiceImpl implements IOrderService {
 
         if (product != null) {
             orderDetail.setUnitPrice(product.getPrice());
-            orderDetail.setTotalPrice(product.getPrice() * quantity);
+            orderDetail.setTotalPrice(Double.valueOf(product.getPrice() * quantity));
         } else if (combo != null) {
             orderDetail.setUnitPrice(combo.getComboPrice());
-            orderDetail.setTotalPrice(combo.getComboPrice() * quantity);
+            orderDetail.setTotalPrice(Double.valueOf(combo.getComboPrice() * quantity));
         }
-
         // Thiết lập thông tin nước uống nếu có
         if (drinkId != null) {
             Optional<Product> drinkOptional = productRepository.findByProductId(drinkId);
@@ -261,7 +242,6 @@ public class OrderServiceImpl implements IOrderService {
                 orderDetail.setDrinkProduct(drink);
             }
         }
-
         orderDetail.setSize(s);
         orderDetail.setStore(storeOptional.get());
         orderDetail.setStatus(statusOrder);
@@ -269,20 +249,72 @@ public class OrderServiceImpl implements IOrderService {
         orderDetails.add(orderDetail);
         order.setOrderDetails(orderDetails);
         order.setTotalAmount(orderDetail.getTotalPrice());
+        // Nhóm các order detail theo cửa hàng
+        if (!deliveryAddress.equalsIgnoreCase("Mua tại cửa hàng")) {
+            Map<Store, List<OrderDetail>> groupedOrderDetails = orderDetails.stream()
+                    .collect(Collectors.groupingBy(OrderDetail::getStore));
+            for (Map.Entry<Store, List<OrderDetail>> entry : groupedOrderDetails.entrySet()) {
+                Store store = entry.getKey();
+//                List<OrderDetail> orderDetailList = entry.getValue();
+//                // Tìm shipper gần nhất nhưng không phải shipper đang bận
+//                User nearestShipper = shipperRepository.findNearestShippers(store.getLatitude(), store.getLongitude(), 1)
+//                        .stream()
+//                        .findFirst()
+//                        .orElseThrow(() -> new EntityNotFoundException("No available shippers found nearby"));
+//                ShipperOrder newShipperOrder = new ShipperOrder();
+//                newShipperOrder.setStore(store);
+//                newShipperOrder.setShipper(nearestShipper);
+//                newShipperOrder.setCreatedAt(LocalDateTime.now());
+//                newShipperOrder.setStatus("Chưa nhận");
+//                // set the shipper to inactive
+//                nearestShipper.setIsActive(false);
+//                shipperRepository.save(nearestShipper);
+//                shipperOrderRepository.save(newShipperOrder);
+                // Gán ShipperOrder cho tất cả các OrderDetail của store này
+                //orderDetailList.forEach(orderDetail1 -> orderDetail1.setShipperOrder(newShipperOrder));
+                // tính phí vận chuyển
+                Double shippingFee = calculateShippingFee(order, store);
+                order.setShippingFee(shippingFee);
+            }
+        }
+        order.setOrderDetails(orderDetails);
         orderRepository.save(order);
 
         return ResponseEntity.ok(new APIRespone(true, "Order placed successfully", ""));
     }
+    private Double calculateShippingFee(Order order, Store store) {
+        double storeLatitude = store.getLatitude();
+        double storeLongitude = store.getLongitude();
+        double deliveryLatitude = order.getLatitude();
+        double deliveryLongitude = order.getLongitude();
+        // tinh khoang cach giua 2 diem tren trai dat
+        final int EARTH_RADIUS = 6371; // ban kinh trai dat
+        double latDistance = Math.toRadians(deliveryLatitude - storeLatitude);
+        double lonDistance = Math.toRadians(deliveryLongitude - storeLongitude);
+        double a = Math.sin(latDistance / 2) * Math.sin(latDistance / 2)
+                + Math.cos(Math.toRadians(storeLatitude)) * Math.cos(Math.toRadians(deliveryLatitude))
+                * Math.sin(lonDistance / 2) * Math.sin(lonDistance / 2);
+        double c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+        double distance = EARTH_RADIUS * c;
+        System.out.println("Distance: " + distance);
+        double shippingFeePerKm = 10000;
+        double shippingFee = distance * shippingFeePerKm;
+        // bội số của 1000
+        return (Double) (Math.floor(shippingFee / 1000) * 1000);
+    }
+
+
 
     @Override
-    public Long calculateOrderNowAmount(Long productId, Long comboId, int quantity) {
+    public Long calculateOrderNowAmount(Long productId, Long comboId, int quantity, Long storeId, Double Latitude, Double Longitude) {
+        long totalAmount = 0L;
         if (productId != null) {
             Optional<Product> productOptional = productRepository.findByProductId(productId);
             if (productOptional.isEmpty()) {
                 return null;
             }
             Product product = productOptional.get();
-            return Math.round(product.getPrice() * quantity);
+            totalAmount += Math.round(product.getPrice() * quantity);
         }
         if (comboId != null) {
             Optional<Combo> comboOptional = comboRepository.findById(comboId);
@@ -290,10 +322,26 @@ public class OrderServiceImpl implements IOrderService {
                 return null;
             }
             Combo combo = comboOptional.get();
-            return Math.round(combo.getComboPrice() * quantity);
+            totalAmount += Math.round(combo.getComboPrice() * quantity);
         }
-        return null;
+        // cong them phi ship
+        Optional<Store> storeOptional = storeRepository.findById(storeId);
+        if (storeOptional.isPresent()) {
+            Store store = storeOptional.get();
+            // Sử dụng phương thức calculateShippingFee để tính phí ship
+            Order dummyOrder = new Order(); // Tạo đơn hàng tạm thời chỉ để chứa địa chỉ giao hàng
+            dummyOrder.setLatitude(Latitude);
+            dummyOrder.setLongitude(Longitude);
+
+            Double shippingFee = calculateShippingFee(dummyOrder, store);
+            totalAmount += shippingFee.longValue(); // Cộng phí ship vào tổng tiền
+        } else {
+            return null;
+        }
+        return totalAmount;
+
     }
+
     @Transactional
     @Override
     public ResponseEntity<APIRespone> updateQuantityProduct(Long productId, Long comboId, Long storeId, int quantity) {
@@ -340,9 +388,9 @@ public class OrderServiceImpl implements IOrderService {
         }
         return ResponseEntity.badRequest().body(new APIRespone(false, "Neither product nor combo found", ""));
     }
+    @Transactional
     @Override
     public ResponseEntity<APIRespone> updateOrderStatus(String orderCode,String status) {
-        System.out.println("vao updateOrderStatus");
         Optional<Order> orderOptional = orderRepository.findByOrderCode(orderCode);
         if (orderOptional.isEmpty()) {
             return ResponseEntity.badRequest().body(new APIRespone(false, "Order code not found", ""));
@@ -354,9 +402,8 @@ public class OrderServiceImpl implements IOrderService {
         Order order = orderOptional.get();
         order.setStatus(statusOrder);
         orderRepository.save(order);
-        return ResponseEntity.ok(new APIRespone(true, "Order status updated successfully", new OrderResponse(order)));
+        return ResponseEntity.ok(new APIRespone(true, "Order status updated successfully",""));
     }
-
     @Override
     public ResponseEntity<APIRespone> getAllOrderDetailOfStore(Long ownerId) {
         List<Order> orders = orderRepository.findAll();
@@ -369,7 +416,7 @@ public class OrderServiceImpl implements IOrderService {
         }
         List<Order> orders1 = orders.stream()
                 .filter(order -> order.getOrderDetails().stream().anyMatch(orderDetail -> stores.contains(orderDetail.getStore())))
-                .collect(Collectors.toList());
+                .toList();
         if (orders1.isEmpty()) {
             return ResponseEntity.badRequest().body(new APIRespone(false, "No order found", ""));
         }
@@ -378,6 +425,7 @@ public class OrderServiceImpl implements IOrderService {
                 .collect(Collectors.toList());
         return ResponseEntity.ok(new APIRespone(true, "Success", orderResponses));
     }
+
     @Override
     public ResponseEntity<APIRespone> getOrderDetailOfStore(Long ownerId, String orderCode) {
         Optional<Order> orderOptional = orderRepository.findByOrderCode(orderCode);
@@ -394,21 +442,7 @@ public class OrderServiceImpl implements IOrderService {
         }
         return ResponseEntity.ok(new APIRespone(true, "Success", new OrderResponse(order)));
     }
-    @Override
-    public ResponseEntity<APIRespone> getOrderDetailByUserId(Long userId, String orderCode) {
-        Optional<Order> orderOptional = orderRepository.findByOrderCode(orderCode);
-        if (orderOptional.isEmpty()) {
-            return ResponseEntity.badRequest().body(new APIRespone(false, "Order code not found", ""));
-        }
-        Order order = orderOptional.get();
-        if (!order.getUser().getId().equals(userId)) {
-            return ResponseEntity.badRequest().body(new APIRespone(false, "Order does not belong to the specified user", ""));
-        }
-        if (order.getOrderDetails().stream().noneMatch(orderDetail -> order.getUser().getId().equals(userId))) {
-            return ResponseEntity.badRequest().body(new APIRespone(false, "Order does not belong to the specified user", ""));
-        }
-        return ResponseEntity.ok(new APIRespone(true, "Success", new OrderResponse(order)));
-    }
+
 
     @Override
     public ResponseEntity<APIRespone> updateStatusDetail(String orderCode, Long OwnerId, String Status) {
@@ -502,8 +536,11 @@ public class OrderServiceImpl implements IOrderService {
             return ResponseEntity.badRequest().body(new APIRespone(false, "Order not found", ""));
         }
         Order order = orderOptional.get();
-        return ResponseEntity.ok(new APIRespone(true, "Success", new OrderResponse(order)));
+        OrderResponse orderResponse = new OrderResponse(order);
+        return ResponseEntity.ok(new APIRespone(true, "Success", orderResponse));
     }
+
+
     @Override
     public ResponseEntity<APIRespone> getAllOrderDetailsByUser(Long userId) {
         List<Order> orders = orderRepository.findAllByUserId(userId);
@@ -512,6 +549,22 @@ public class OrderServiceImpl implements IOrderService {
         }
         List<OrderResponse> orderResponses = orders.stream().map(OrderResponse::new).collect(Collectors.toList());
         return ResponseEntity.ok(new APIRespone(true, "Success", orderResponses));
+    }
+
+    @Override
+    public ResponseEntity<APIRespone> getOrderDetailByUserId(Long userId, String orderCode) {
+        Optional<Order> orderOptional = orderRepository.findByOrderCode(orderCode);
+        if (orderOptional.isEmpty()) {
+            return ResponseEntity.badRequest().body(new APIRespone(false, "Order code not found", ""));
+        }
+        Order order = orderOptional.get();
+        if (!order.getUser().getId().equals(userId)) {
+            return ResponseEntity.badRequest().body(new APIRespone(false, "Order does not belong to the specified user", ""));
+        }
+        if (order.getOrderDetails().stream().noneMatch(orderDetail -> order.getUser().getId().equals(userId))) {
+            return ResponseEntity.badRequest().body(new APIRespone(false, "Order does not belong to the specified user", ""));
+        }
+        return ResponseEntity.ok(new APIRespone(true, "Success", new OrderResponse(order)));
     }
     
 
